try to get it to work with docker registry

--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         image: laraka/srt-advanced-server
         tags: latest
-        registry: hub.docker.com
+        # registry: hub.docker.com
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
